Source/WebKit/UIProcess/WebContextSupplement.h
@@ -49,7 +49,7 @@ public:
     }
 
     WebProcessPool* processPool() { return m_processPool.get(); }
-    RefPtr<WebProcessPool> protectedProcessPool() { return processPool(); }
+
     void clearProcessPool() { m_processPool = nullptr; }
 
     void ref() { refWebContextSupplement(); }
